--- a/app/components-react/editor/elements/SceneSelector.m.less
+++ b/app/components-react/editor/elements/SceneSelector.m.less
@@ -156,6 +156,25 @@
 
   i {
     margin-left: 8px;
+    opacity: 0;
+  }
+
+  :global(.fa-signal) {
+    opacity: 1;
+    color: var(--teal);
+  }
+
+  :global(.icon-lock),
+  :global(.icon-hide),
+  :global(.icon-broadcast),
+  :global(.icon-studio) {
+    opacity: 0.7;
+  }
+
+  &:hover {
+    i {
+      opacity: 1;
+    }
   }
 }
 
