WIP: Vertical display popout link.

--- a/app/components-react/root/StudioEditor.m.less
+++ b/app/components-react/root/StudioEditor.m.less
@@ -218,6 +218,10 @@
     grid-row: 1;
     justify-self: center;
     align-self: center;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .manage-link {
@@ -235,6 +239,12 @@
     &:hover {
       text-decoration: none;
     }
+  }
+
+  .vertical-popout {
+    position: absolute;
+    top: 5px;
+    right: 5px;
   }
 }
 
